fix: Make sure messages don't expand out of the screen

--- a/assets/stylesheets/components/messages.css
+++ b/assets/stylesheets/components/messages.css
@@ -92,6 +92,8 @@
 
     margin-top: var(--space-large);
     margin-bottom: var(--space-large);
+
+    word-wrap: anywhere;
 }
 
 .message__content h1 {
